feat(cache): 集成Redis缓存并完善用户认证功能
- 配置Redis连接参数和缓存设置
- 在AuthController中优化JWT令牌生成逻辑
- 添加用户注册时的参数验证检查
- 为实体类添加Lombok注解以排除循环引用
- 修复BizUserInfoController中的重复电话号码设置
- 实现精确的部分更新功能到BorrowerDetailsService和BorrowersService
- 为多个控制器添加全面的单元测试覆盖
- 优化数据库实体的时间戳更新策略